--- a/DebonairDev/DebonairDev.csproj
+++ b/DebonairDev/DebonairDev.csproj
@@ -81,6 +81,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\images\DebonairLogoWhite.png" />
     <Content Include="Assets\images\workstation.jpg" />
     <Content Include="Assets\scripts\custom.js" />
     <Content Include="Assets\scripts\jquery-2.2.0.js" />
